--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendor/requirejs-text"]
 	path = vendor/requirejs-text
 	url = git://github.com/requirejs/text
+[submodule "vendor/jasmine-sinon"]
+	path = vendor/jasmine-sinon
+	url = git://github.com/froots/jasmine-sinon.git
