--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vendor/jasmine-sinon"]
 	path = vendor/jasmine-sinon
 	url = git://github.com/froots/jasmine-sinon.git
+[submodule "vendor/jasmine-jquery"]
+	path = vendor/jasmine-jquery
+	url = git://github.com/velesin/jasmine-jquery.git
