--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "directories": {"pages": "./pages"},
   "dependencies": {
     "grunt": ">=0.3.11",
-    "grunt-contrib": ">=0.1.3"
+    "grunt-contrib": ">=0.1.3",
+    "mongoose": ">=2.7.3"
   },
   "devDependencies": {
-    "grunt-jasmine-task": ">=0.2.1"
+    "grunt-jasmine-task": ">=0.2.1",
+    "grunt-jasmine-node-task": ">=0.1.0",
+    "jasmine-node": ">=1.0.26",
+    "sinon": ">=1.4.2"
   },
   "scripts": {
     "test": "grunt travis --verbose"
