--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "grunt": ">=0.3.11",
     "grunt-contrib": ">=0.1.3",
+    "express": ">=3.0.0rc2",
     "mongoose": ">=2.7.3"
   },
   "devDependencies": {
